@@ -1,3 +1,0 @@
-The STIX fonts are a suite of unicode OpenType fonts containing
-a complete set of mathematical glyphs. This otf package makes
-the fonts available to X11 apps.
