@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2021/10/26 10:27:24 nia Exp $
-
-BLAKE2s (STIXv1.1.0.zip) = cdb7634eca94a0e7eb061e3b72729067bb2669d25176aa5d0baf0ab67e79601a
-SHA512 (STIXv1.1.0.zip) = 683159caf7e5712524895b206cbc81b4ce24abb339f0b3aff4a29a62c59fd414832e5d4c6e112dacacae69871f02fc28eb6140f539550717455b525c71d0863d
-Size (STIXv1.1.0.zip) = 2712867 bytes
